# polars-fuzzy

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
polars_fuzzy/: __init__.py
src/: expressions.rs  lib.rs
src/algorithms/: mod.rs  nucleo.rs
