[package]
name = "polars-fuzzy"
version = "0.1.1"
edition = "2021"

[lib]
name = "polars_fuzzy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.25.0", features = [
    "derive",
    "dtype-struct",
    "dtype-array",
] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.52.0", default-features = false, features = [
    "strings",
] }
polars-arrow = { version = "0.52.0", default-features = false }
nucleo-matcher = "0.3.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3
