[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars-fuzzy"
version = "0.1.1"
description = "Fast fuzzy string matching for Polars DataFrames, powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Anant Mishra" }]
keywords = ["polars", "fuzzy", "string-matching", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = ["polars>=1.24.0"]

[project.urls]
Homepage = "https://github.com/Anant-mishra1729/polars-fuzzy"
Repository = "https://github.com/Anant-mishra1729/polars-fuzzy"
Issues = "https://github.com/Anant-mishra1729/polars-fuzzy/issues"

[tool.maturin]
module-name = "polars_fuzzy._internal"
python-packages = ["polars_fuzzy"]
features = ["pyo3/extension-module"]

[tool.mypy]
files = ["polars_fuzzy"]
strict = true
exclude = ["**/.DS_Store"]

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
